--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "keywords": [],
   "dependencies": {
@@ -17,3 +17,4 @@
     "node-telegram-bot-api": "^0.66.0"
   }
 }
+
