Remove sensitive data

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# const TELEGRAM_TOKEN = '7828470800:AAHezgdilmemUCNlB55ZioxFD1C6ScJrg5g';
-# const HF_TOKEN = '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';
-# const HF_MODEL = 'HuggingFaceH4/zephyr-7b-beta'; // you can change model
+const TELEGRAM_TOKEN = '7828470800:AAHezgdilmemUCNlB55ZioxFD1C6ScJrg5g';
+const HF_TOKEN = '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';
+const HF_MODEL = 'HuggingFaceH4/zephyr-7b-beta'; // you can change model
